// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > renders checked state properly 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.15rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
    data-slot="switch"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-3.5 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
      data-slot="switch-thumb"
      data-state="checked"
    />
  </button>
</DocumentFragment>
`;

exports[`Switch > renders contents properly 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.15rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
    data-slot="switch"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-3.5 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
      data-slot="switch-thumb"
      data-state="unchecked"
    />
  </button>
</DocumentFragment>
`;

exports[`Switch > renders disabled and checked state properly 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.15rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
    data-disabled=""
    data-slot="switch"
    data-state="checked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-3.5 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
      data-disabled=""
      data-slot="switch-thumb"
      data-state="checked"
    />
  </button>
</DocumentFragment>
`;

exports[`Switch > renders disabled state properly 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.15rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
    data-disabled=""
    data-slot="switch"
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-3.5 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
      data-disabled=""
      data-slot="switch-thumb"
      data-state="unchecked"
    />
  </button>
</DocumentFragment>
`;

exports[`Switch > renders unchecked state properly 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.15rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
    data-slot="switch"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-3.5 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
      data-slot="switch-thumb"
      data-state="unchecked"
    />
  </button>
</DocumentFragment>
`;
